<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miembros_del_clan"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/Titulo1" android:textSize="18sp"
                android:textColor="@color/Titulo"
                android:layout_marginTop="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miembros_presentes"
                android:id="@+id/titulo" android:textSize="18sp"
                android:textColor="@color/Titulo"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/btnAgregar"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        />
        <TextView
                android:text="@string/txtListaRovers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/txtIntegrantes"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/titulo"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/spinner"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/Titulo1" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
        <Button
                android:text="@string/boton_agregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnAgregar"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"/>
        <Button
                android:text="@string/boton_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnEliminar"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintStart_toEndOf="@+id/btnAgregar"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"/>
        <Button
                android:text="@string/boton_procesar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnProcesar"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/txtIntegrantes" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>